updated portal images

--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -31,15 +31,21 @@ To begin working with **Power Apps Portal**, navigate to the **Maker Portal** an
 
 <insert new app image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AddPortalApp.PNG" style="zoom: 80%;" />
+
 Go through the provisioning wizard to define the basic characteristics of your Power Apps Portal including a name, the URL and what language or region to use. [Here is a reference to a step by step guide to provisioning the portal](https://docs.microsoft.com/en-us/powerapps/maker/portals/create-portal) that includes important considerations.
 
 When initially configured and provisioned, a new **Model Driven Power Application** titled '***Portal Management***' will appear. This application will serve as the primary customization point for makers and portal developers. This will also be where **Azure Application Insights** will be configured to work within **Power Apps Portals**.
 
 <insert portal mgmt app>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+
 NOTE: If your **Power Platform** environment has migrated from **Dynamics 365** and included **Dynamics 365 Portals** you may see the **Model Driven Application** called '***Dynamics 365 Portals***'.
 
 <insert dynamics 365 portal app>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/mda.dynamics365portals.PNG" style="zoom: 80%;" />
 
 ## Adding Azure Application Insights to Power Apps Portal
 
@@ -53,11 +59,15 @@ Once the application has loaded, locate the 'Enable Traffic Analytics' sub area 
 
 <insert enable traffic analy image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/Admin.EnableTrafficAnalytics.PNG" style="zoom: 80%;" />
+
 ### Add the Azure Application Insights SDK
 
 The Portal Analytics page will prompt makers to choose a portal, depending if multiples exist, and an area to include the Azure Application Insights snippet.
 
 <insetportal anly image>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
 
 To locate the Azure Application Insights JavaScript SDK snippet, two primary options exist: [reference the official Microsoft Docs site](https://docs.microsoft.com/en-us/azure/azure-monitor/app/javascript#snippet-based-setup) or [go to the GitHub repository](https://github.com/microsoft/ApplicationInsights-JS#snippet-setup-ignore-if-using-npm-setup). As referenced in the Power Apps Component Framework article, I tend to go with the GitHub repository but either will work.
 
@@ -70,6 +80,8 @@ When adding the Azure Application Insights SDK snippet, the application is updat
 Once the snippet for the JavaScript SDK has been added, it needs to be configured to point to the organization's Azure Application Insights resource. The instrumentation key is a 32 digit GUID located on the Overview page of the Azure Application Insights resource.
 
 <insert instrumentation key>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
 
 The instrumentation key will need to be added to the telemetry client's configuration property 'instrumentationKey' as shown below.
 
@@ -93,9 +105,13 @@ The window object on each Power Apps Portal web page contains a Microsoft object
 
 <insert microsoft object image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+
 Using this object we can set the "ai.cloud.role" or other contextual attributes to set the type of Portal:
 
 <insert Fiddler image of CustomerPortal image>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
 
 
 
@@ -105,11 +121,17 @@ Now that the Azure Application Insights snippet has been added, the configuratio
 
 <insert app insights image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+
 Portal, being a Web App by nature, works really well with various features of Azure Application Insights. Some highlights include User Session Timelines and User Flows. These features tend to provide a good visualization and help answer questions like "***where do my users typically go from the home page?***" or "***how long were they on a page before navigating away?***"
 
 <insert session image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+
 <insert user flow image>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
 
 ## Sample Code
 
