added images to portal doc

--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -67,7 +67,7 @@ The Portal Analytics page will prompt makers to choose a portal, depending if mu
 
 <insetportal anly image>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/Portals.EnableTrafficAnalytics.PNG" style="zoom: 80%;" />
 
 To locate the Azure Application Insights JavaScript SDK snippet, two primary options exist: [reference the official Microsoft Docs site](https://docs.microsoft.com/en-us/azure/azure-monitor/app/javascript#snippet-based-setup) or [go to the GitHub repository](https://github.com/microsoft/ApplicationInsights-JS#snippet-setup-ignore-if-using-npm-setup). As referenced in the Power Apps Component Framework article, I tend to go with the GitHub repository but either will work.
 
@@ -81,7 +81,7 @@ Once the snippet for the JavaScript SDK has been added, it needs to be configure
 
 <insert instrumentation key>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/MonitorPortalsAppInsightsInstruKey.png" style="zoom: 80%;" />
 
 The instrumentation key will need to be added to the telemetry client's configuration property 'instrumentationKey' as shown below.
 
@@ -89,53 +89,49 @@ The instrumentation key will need to be added to the telemetry client's configur
 cfg: { // Application Insights Configuration    instrumentationKey: "YOUR_INSTRUMENTATION_KEY_GOES_HERE"    /* ...Other Configuration Options... */ }});
 ```
 
-Once the instrumentation key has been added and the changes have been applied to the Power Apps Portal, telemetry will begin to flow to Azure Application Insights. With that in mind, as discussed in previous articles, enriching the messages sent is key to optimizing the various features of Azure Application Insights. Continuing that train of thought, let's explore some options Power Apps Portal will allow for enrichment.
+Once the instrumentation key has been added and the changes have been applied to the **Power Apps Portal**, telemetry will begin to flow to **Azure Application Insights**. With that in mind, as discussed in previous articles, enriching the messages sent is key to optimizing the various features of **Azure Application Insights**. Continuing that train of thought, let's explore some options **Power Apps Portal** will allow for enrichment.
 
 ## Enriching the Power Apps Portal Messages
 
 ### Working with Liquid Templating Objects
 
-Liquid Templating allows makers and developers to add contextual information dynamically to **Power Apps Portal** web pages. Logged in user information, site settings, **Common Data Service** data, etc can all be referenced. For example, to work with user contextual information, [refer to this article](https://docs.microsoft.com/en-us/powerapps/maker/portals/liquid/liquid-objects#user), which describes user as an entity object (contact). 
+**Liquid Templating** allows makers and developers to add contextual information dynamically to **Power Apps Portal** web pages. Logged in user information, site settings, **Common Data Service** data, etc can all be referenced. For example, to work with user contextual information, [refer to this article](https://docs.microsoft.com/en-us/powerapps/maker/portals/liquid/liquid-objects#user), which describes user as an entity object (contact). 
 
 Below is an example of referencing a logged in user's information to set the authenticated user context within the Application Insights telemetry client.
 
 ### Working with Portal Web Page Variables
 
-The window object on each Power Apps Portal web page contains a Microsoft object which includes information about the portal and user. I haven't seen this documented so I would not rely on it being supported.
+The window object on each **Power Apps Portal** web page contains a Microsoft object which includes information about the portal and user. I haven't seen this documented so I would not rely on it being supported.
 
 <insert microsoft object image>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal.AppInsightsSnippet.MicrosoftInternals.PNG" style="zoom: 80%;" />
 
-Using this object we can set the "ai.cloud.role" or other contextual attributes to set the type of Portal:
+Using this object we can set the "***ai.cloud.role***" or other contextual attributes to set the type of Portal:
 
 <insert Fiddler image of CustomerPortal image>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AppInsights.ContextInfoExampleFiddler.PNG" style="zoom: 80%;" />
 
 
 
 ## Reviewing Initial Messages in Azure Application Insights
 
-Now that the Azure Application Insights snippet has been added, the configuration established and the context enriched, the final step to getting started is to review messages. Navigating to the Azure Portal and Application Insights scripts, we can write basic Kusto queries to see our users interaction with the portal.
+Now that the **Azure Application Insights** snippet has been added, the configuration established and the context enriched, the final step to getting started is to review messages. Navigating to the **Azure Portal** and **Application Insights** scripts, we can write basic **Kusto** queries to see our users interaction with the portal.
 
 <insert app insights image>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AppInsights.PageViews.Basic.PNG" style="zoom: 80%;" />
 
-Portal, being a Web App by nature, works really well with various features of Azure Application Insights. Some highlights include User Session Timelines and User Flows. These features tend to provide a good visualization and help answer questions like "***where do my users typically go from the home page?***" or "***how long were they on a page before navigating away?***"
-
-<insert session image>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+Portal, being a Web App by nature, works really well with various features of **Azure Application Insights**. Some highlights include **User Session Timelines** and **User Flows**. These features tend to provide a good visualization and help answer questions like "***where do my users typically go from the home page?***" or "***how long were they on a page before navigating away?***"
 
 <insert user flow image>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AppInsights.UserFlow.PNG" style="zoom: 80%;" />
 
 ## Sample Code
 
-The sample code used in this article can be found in the MonitoringPowerPlatform GitHub repo located here.
+The sample code used in this article can be found in the [**MonitoringPowerPlatform** GitHub repo located here](https://github.com/aliyoussefi/MonitoringPowerPlatform/blob/master/Samples/PowerAppsPortals/AppInsights/ApplicationInsightsV2_SnippetAndExample.js).
 
 
 
@@ -145,9 +141,9 @@ The sample code used in this article can be found in the MonitoringPowerPlatform
 
 https://stoneridgesoftware.com/using-liquid-templates-and-fetchxml-to-retrieve-data-in-a-dynamics-365-online-portal/
 
-In this article we have discussed how to set up Azure Application Insights with Power Apps Portals. We covered using the content snippet to add the Azure Application Insights JavaScript SDK. We discussed how to extend the SDK to include values from liquid templating and window objects. Finally we reviewed page views and how they can represented in Application Insights.
+In this article we have discussed how to set up **Azure Application Insights** with **Power Apps Portals**. We covered using the content snippet to add the **Azure Application Insights JavaScript SDK**. We discussed how to extend the SDK to include values from liquid templating and window objects. Finally we reviewed page views and how they can represented in **Application Insights**.
 
-For next steps, continue exploring liquid templating and how to continuous enrich your messages sent to Azure Application Insights. Consider the custom property and metrics bag and how these can be supplmented with Common Data Service content or browser resource timings. Continuing this series we will cover how to implement and use Azure Blob Storage for diagnostic logging.
+For next steps, continue exploring liquid templating and how to continuous enrich your messages sent to Azure Application Insights. Consider the custom property and metrics bag and how these can be supplmented with **Common Data Service** content or browser resource timings. Continuing this series we will cover how to implement and use **Azure Blob Storage** for diagnostic logging.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details.
 
