--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -1,39 +1,31 @@
 # Monitoring the Power Platform: PowerApps Portal - Implementing Application Insights
 ## Summary
 
-Instrumentation of Power Apps Canvas Applications is a feature first released in a preview of the Release Wave 1 for 2020. This out of the box capability allows for the capturing and examination of usage and performance metrics. This article will focus on current tooling available and describing the steps to setup Azure Application Insights within a Canvas Application. We will also examine the currently available events and metrics sent from an application and how to work with the Monitoring Tool.
+[**Power Apps Portal**](https://docs.microsoft.com/en-us/powerapps/maker/portals/overview#:~:text=Power%20Apps%20portals%20are%20based%20on%20Bootstrap%203.3.x,Bootstrap%203.3.x.%20Certain%20experiences%20might%20have%20known%20issues.) represent a unique offering to the **Power Platform**, one that allows the **Power Platform** to reach virtually any and all users your enterprise wants to connect to. It represents the external face of your enterprise to your users, allowing them to interact with other users as well as internal representatives. Users can now provide updates and artifacts to the **Common Data Service** without the need to communicate with your enterprise reps, freeing them to focus on providing the best customer experience available. **Power Apps Portal** allow its users to interact anonymously and login using their preferred identity of choice, opening up the **Common Data Service** like never before.
 
-Considering the importance and interest in audit and activity logging, this article will briefly touch on how to gather this information from the Office 365 Security and Compliance Center.
+This article will focus on how **Power Apps Portal** administrators can implement a monitoring strategy to better understand their user base. Insights into user traffic and interactions with the **Power Apps Portal** can all be tracked. Using this data, your organization can focus on how to better serve your customer base and provide an optimal solution and experience. 
 
-## What is Power Apps Portal
-
-Power Apps Canvas Apps represent a no or low code approach to building and delivering modern applications for makers. The requirements of knowing programming languages such as C# have been removed allowing makers of virtually any background to build apps. These apps can be used with connectors to hundreds of connectors allowing for a flexible user interface layered on top of data sources. Apps can also be generated from data sources automatically allowing you to quickly create and deploy an application to your team or customers. Reference: https://docs.microsoft.com/en-us/powerapps/maker/canvas-apps/getting-started
-
-Included in the Maker Portal are example Power Apps to help curate ideas and help as a jumping off point. These samples can be extended to include your custom connectors, business processes, etc.
-
-For example, imagine having an excel spreadsheet your team works on to track expenses. In the past we would share the spreadsheet or a template with out colleagues and enter our individual entries each cell and row at a time. With the inclusion of the Microsoft Excel connector I can now have an app available both on my workstation and mobile allowing me to view and enter data in a much more friendly experience. This application can be built without knowledge or using a single line of code using the Power Apps Designer.
-
-Finally, the Canvas App community is extensive and a great place to collaborate and contribute ideas and discussions: https://aka.ms/powerapps-community
+In this article we focus on adding **Azure Application Insights** to a **Power Apps Portal**. We explore how to configure and provide context which will provide rich and meaningful telemetry.
 
 ## What is Azure Application Insights
 
 ![ ](https://community.dynamics.com/resized-image/__size/320x240/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/2262.pastedimage1589496009445v17.png)
 
-[Azure Application Insights is an extensible Application Performance Management (APM) service](https://docs.microsoft.com/en-us/azure/azure-monitor/app/app-insights-overview) that can be used to monitor applications, tests, etc. **Azure Application Insights** can be used with any application hosted in any environment. Depending on what's being monitored there are SDKs available. For other applications connections and message delivery can be programmed using the REST APIs available.
+**[Azure Application Insights** is an extensible Application Performance Management (APM) service](https://docs.microsoft.com/en-us/azure/azure-monitor/app/app-insights-overview) that can be used to monitor applications, tests, etc. **Azure Application Insights** can be used with any application hosted in any environment. Depending on what's being monitored there are SDKs available. For other applications connections and message delivery can be programmed using the REST APIs available.
 
-For Power Platform components, Application Insights is recommended due to its direct integration with Power Apps features and tools and its capabilities to deliver to the API.
+For **Power Platform** components, **Application Insights** is recommended due to its direct integration with **Power Apps** features and tools and its capabilities to deliver to the API.
 
-Once we begin sending telemetry to Application Insights we can review in real time availability tests, user actions, deployment metrics as well as other feedback from our applications. Connecting our messages with correlation identifiers allows us a holistic view into how our apps are interdependent upon each other. This provides the transparency desired and honestly needed with modern era technology.
+Once we begin sending telemetry to **Application Insights** we can review in real time availability tests, user actions, deployment metrics as well as other feedback from our applications. Connecting our messages with correlation identifiers allows us a holistic view into how our apps are interdependent upon each other. This provides the transparency desired and honestly needed with modern era technology.
 
 ## Adding a Power Apps Portal to a Power Platform Environment
 
-To begin working with **Power Apps Portal**, navigate to the **Maker Portal** and add a new application. This is similar to adding a new Model or Canvas Driven application within the Maker Portal.
+To begin working with **Power Apps Portal**, navigate to the **Maker Portal** and add a new application. This is similar to adding a new **Model or Canvas Driven application** within the **Maker Portal**.
 
 <insert new app image>
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AddPortalApp.PNG" style="zoom: 80%;" />
 
-Go through the provisioning wizard to define the basic characteristics of your Power Apps Portal including a name, the URL and what language or region to use. [Here is a reference to a step by step guide to provisioning the portal](https://docs.microsoft.com/en-us/powerapps/maker/portals/create-portal) that includes important considerations.
+Go through the provisioning wizard to define the basic characteristics of your **Power Apps Portal** including a name, the URL and what language or region to use. [Here is a reference to a step by step guide to provisioning the portal](https://docs.microsoft.com/en-us/powerapps/maker/portals/create-portal) that includes important considerations.
 
 When initially configured and provisioned, a new **Model Driven Power Application** titled '***Portal Management***' will appear. This application will serve as the primary customization point for makers and portal developers. This will also be where **Azure Application Insights** will be configured to work within **Power Apps Portals**.
 
@@ -49,13 +41,13 @@ NOTE: If your **Power Platform** environment has migrated from **Dynamics 365** 
 
 ## Adding Azure Application Insights to Power Apps Portal
 
-Similiar to web based application encompassing HTML, CSS and JavaScript, Power Apps Portal pages can be injected with the Azure Application Insights JavaScript SDK. **Oleksandr Olashyn's** article "[PowerApps Portals tracking using Azure Application Insights](https://www.dancingwithcrm.com/powerappsportals-tracking-using-azure-app-insights/)" does a great job detailing provisioning **Azure Application Insights** and adding the JavaScript SDK that I describe in this section.
+Similar to web based application encompassing HTML, CSS and JavaScript, **Power Apps Portal** pages can be injected with the **Azure Application Insights JavaScript SDK**. **Oleksandr Olashyn's** article "[PowerApps Portals tracking using Azure Application Insights](https://www.dancingwithcrm.com/powerappsportals-tracking-using-azure-app-insights/)" does a great job detailing provisioning **Azure Application Insights** and adding the JavaScript SDK that I describe in this section.
 
 ### Open the Portal Management Power App
 
 When a **Power Apps Portal Application** is added to a **Power Platform** environment a **Model Driven Application** titled '***Portal Management***' will also be added. To add **Azure Application Insights**, begin by playing the '***Portal Management***' app.
 
-Once the application has loaded, locate the 'Enable Traffic Analytics' sub area within the Administration group on [the site map](https://docs.microsoft.com/en-us/powerapps/maker/model-driven-apps/create-site-map-app) and open. 
+Once the application has loaded, locate the '***Enable Traffic Analytics***' sub area within the Administration group on [the site map](https://docs.microsoft.com/en-us/powerapps/maker/model-driven-apps/create-site-map-app) and open. 
 
 <insert enable traffic analy image>
 
@@ -63,21 +55,21 @@ Once the application has loaded, locate the 'Enable Traffic Analytics' sub area 
 
 ### Add the Azure Application Insights SDK
 
-The Portal Analytics page will prompt makers to choose a portal, depending if multiples exist, and an area to include the Azure Application Insights snippet.
+The ***Portal Analytics*** page will prompt makers to choose a portal, depending if multiples exist, and an area to include the **Azure Application Insights** snippet.
 
 <insetportal anly image>
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/Portals.EnableTrafficAnalytics.PNG" style="zoom: 80%;" />
 
-To locate the Azure Application Insights JavaScript SDK snippet, two primary options exist: [reference the official Microsoft Docs site](https://docs.microsoft.com/en-us/azure/azure-monitor/app/javascript#snippet-based-setup) or [go to the GitHub repository](https://github.com/microsoft/ApplicationInsights-JS#snippet-setup-ignore-if-using-npm-setup). As referenced in the Power Apps Component Framework article, I tend to go with the GitHub repository but either will work.
+To locate the **Azure Application Insights JavaScript SDK** snippet, two primary options exist: [reference the official Microsoft Docs site](https://docs.microsoft.com/en-us/azure/azure-monitor/app/javascript#snippet-based-setup) or [go to the GitHub repository](https://github.com/microsoft/ApplicationInsights-JS#snippet-setup-ignore-if-using-npm-setup). As referenced in the **[Power Apps Component Framework** article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-apps---power-apps-component-framework), I tend to go with the GitHub repository but either will work.
 
 NOTE: The version of the SDK may change, the current version of this writing is 2.5.6. [For the most current release, refer to this reference](https://github.com/microsoft/ApplicationInsights-JS/releases).
 
-When adding the Azure Application Insights SDK snippet, the application is updating a **adx_contentsnippet** entity record titled '***Tracking Code***'.
+When adding the **Azure Application Insights SDK** snippet, the application is updating a **adx_contentsnippet** entity record titled '***Tracking Code***'.
 
 ### Configure the Azure Application Insights SDK
 
-Once the snippet for the JavaScript SDK has been added, it needs to be configured to point to the organization's Azure Application Insights resource. The instrumentation key is a 32 digit GUID located on the Overview page of the Azure Application Insights resource.
+Once the snippet for the JavaScript SDK has been added, it needs to be configured to point to the organization's **Azure Application Insights** resource. The instrumentation key is a 32 digit GUID located on the Overview page of the **Azure Application Insights** resource.
 
 <insert instrumentation key>
 
