portal doc updated with references to Nikita

--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -1,4 +1,4 @@
-# Monitoring the Power Platform: PowerApps Portal - Implementing Application Insights
+# Monitoring the Power Platform: Power Apps Portal - Implementing Application Insights
 ## Summary
 
 [**Power Apps Portal**](https://docs.microsoft.com/en-us/powerapps/maker/portals/overview#:~:text=Power%20Apps%20portals%20are%20based%20on%20Bootstrap%203.3.x,Bootstrap%203.3.x.%20Certain%20experiences%20might%20have%20known%20issues.) represent a unique offering to the **Power Platform**, one that allows the **Power Platform** to reach virtually any and all users your enterprise wants to connect to. It represents the external face of your enterprise to your users, allowing them to interact with other users as well as internal representatives. Users can now provide updates and artifacts to the **Common Data Service** without the need to communicate with your enterprise reps, freeing them to focus on providing the best customer experience available. **Power Apps Portal** allow its users to interact anonymously and login using their preferred identity of choice, opening up the **Common Data Service** like never before.
@@ -21,21 +21,15 @@ Once we begin sending telemetry to **Application Insights** we can review in rea
 
 To begin working with **Power Apps Portal**, navigate to the **Maker Portal** and add a new application. This is similar to adding a new **Model or Canvas Driven application** within the **Maker Portal**.
 
-<insert new app image>
-
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AddPortalApp.PNG" style="zoom: 80%;" />
 
 Go through the provisioning wizard to define the basic characteristics of your **Power Apps Portal** including a name, the URL and what language or region to use. [Here is a reference to a step by step guide to provisioning the portal](https://docs.microsoft.com/en-us/powerapps/maker/portals/create-portal) that includes important considerations.
 
 When initially configured and provisioned, a new **Model Driven Power Application** titled '***Portal Management***' will appear. This application will serve as the primary customization point for makers and portal developers. This will also be where **Azure Application Insights** will be configured to work within **Power Apps Portals**.
 
-<insert portal mgmt app>
-
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal-mgmt-app.png" style="zoom: 80%;" />
 
-NOTE: If your **Power Platform** environment has migrated from **Dynamics 365** and included **Dynamics 365 Portals** you may see the **Model Driven Application** called '***Dynamics 365 Portals***'.
-
-<insert dynamics 365 portal app>
+**<u>NOTE:</u>** If your **Power Platform** environment has migrated from **Dynamics 365** and included **Dynamics 365 Portals** you may see the **Model Driven Application** called '***Dynamics 365 Portals***'.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/mda.dynamics365portals.PNG" style="zoom: 80%;" />
 
@@ -49,33 +43,27 @@ When a **Power Apps Portal Application** is added to a **Power Platform** enviro
 
 Once the application has loaded, locate the '***Enable Traffic Analytics***' sub area within the Administration group on [the site map](https://docs.microsoft.com/en-us/powerapps/maker/model-driven-apps/create-site-map-app) and open. 
 
-<insert enable traffic analy image>
-
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/Admin.EnableTrafficAnalytics.PNG" style="zoom: 80%;" />
 
 ### Add the Azure Application Insights SDK
 
 The ***Portal Analytics*** page will prompt makers to choose a portal, depending if multiples exist, and an area to include the **Azure Application Insights** snippet.
 
-<insetportal anly image>
-
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/Portals.EnableTrafficAnalytics.PNG" style="zoom: 80%;" />
 
 To locate the **Azure Application Insights JavaScript SDK** snippet, two primary options exist: [reference the official Microsoft Docs site](https://docs.microsoft.com/en-us/azure/azure-monitor/app/javascript#snippet-based-setup) or [go to the GitHub repository](https://github.com/microsoft/ApplicationInsights-JS#snippet-setup-ignore-if-using-npm-setup). As referenced in the **[Power Apps Component Framework** article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-apps---power-apps-component-framework), I tend to go with the GitHub repository but either will work.
 
-NOTE: The version of the SDK may change, the current version of this writing is 2.5.6. [For the most current release, refer to this reference](https://github.com/microsoft/ApplicationInsights-JS/releases).
+**<u>NOTE:</u>** The version of the SDK may change, the current version of this writing is 2.5.6. [For the most current release, refer to this reference](https://github.com/microsoft/ApplicationInsights-JS/releases).
 
 When adding the **Azure Application Insights SDK** snippet, the application is updating a **adx_contentsnippet** entity record titled '***Tracking Code***'.
 
 ### Configure the Azure Application Insights SDK
 
-Once the snippet for the JavaScript SDK has been added, it needs to be configured to point to the organization's **Azure Application Insights** resource. The instrumentation key is a 32 digit GUID located on the Overview page of the **Azure Application Insights** resource.
-
-<insert instrumentation key>
+Once the snippet for the **JavaScript SDK** has been added, it needs to be configured to point to the organization's **Azure Application Insights** resource. The instrumentation key is a 32 digit GUID located on the Overview page of the **Azure Application Insights** resource.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/MonitorPortalsAppInsightsInstruKey.png" style="zoom: 80%;" />
 
-The instrumentation key will need to be added to the telemetry client's configuration property 'instrumentationKey' as shown below.
+The instrumentation key will need to be added to the telemetry client's configuration property '***instrumentationKey***' as shown below.
 
 ```
 cfg: { // Application Insights Configuration    instrumentationKey: "YOUR_INSTRUMENTATION_KEY_GOES_HERE"    /* ...Other Configuration Options... */ }});
@@ -89,19 +77,19 @@ Once the instrumentation key has been added and the changes have been applied to
 
 **Liquid Templating** allows makers and developers to add contextual information dynamically to **Power Apps Portal** web pages. Logged in user information, site settings, **Common Data Service** data, etc can all be referenced. For example, to work with user contextual information, [refer to this article](https://docs.microsoft.com/en-us/powerapps/maker/portals/liquid/liquid-objects#user), which describes user as an entity object (contact). 
 
-Below is an example of referencing a logged in user's information to set the authenticated user context within the Application Insights telemetry client.
+Below is an example of referencing a logged in user's information to set the authenticated user context within the Application Insights telemetry client. 
+
+**<u>Author's Note:</u>** Big thanks for **[Nikita Polyakov](https://www.linkedin.com/in/nikitapolyakov/)** for his assistance with creating and identifying enhancements to this script!
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal.AppInsightsSnippet.Liquid.User.PNG" style="zoom: 80%;" />
 
 ### Working with Portal Web Page Variables
 
 The window object on each **Power Apps Portal** web page contains a Microsoft object which includes information about the portal and user. I haven't seen this documented so I would not rely on it being supported.
 
-<insert microsoft object image>
-
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal.AppInsightsSnippet.MicrosoftInternals.PNG" style="zoom: 80%;" />
 
 Using this object we can set the "***ai.cloud.role***" or other contextual attributes to set the type of Portal:
-
-<insert Fiddler image of CustomerPortal image>
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AppInsights.ContextInfoExampleFiddler.PNG" style="zoom: 80%;" />
 
@@ -111,13 +99,9 @@ Using this object we can set the "***ai.cloud.role***" or other contextual attri
 
 Now that the **Azure Application Insights** snippet has been added, the configuration established and the context enriched, the final step to getting started is to review messages. Navigating to the **Azure Portal** and **Application Insights** scripts, we can write basic **Kusto** queries to see our users interaction with the portal.
 
-<insert app insights image>
-
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AppInsights.PageViews.Basic.PNG" style="zoom: 80%;" />
 
 Portal, being a Web App by nature, works really well with various features of **Azure Application Insights**. Some highlights include **User Session Timelines** and **User Flows**. These features tend to provide a good visualization and help answer questions like "***where do my users typically go from the home page?***" or "***how long were they on a page before navigating away?***"
-
-<insert user flow image>
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AppInsights.UserFlow.PNG" style="zoom: 80%;" />
 
@@ -131,11 +115,9 @@ The sample code used in this article can be found in the [**MonitoringPowerPlatf
 
  
 
-https://stoneridgesoftware.com/using-liquid-templates-and-fetchxml-to-retrieve-data-in-a-dynamics-365-online-portal/
-
 In this article we have discussed how to set up **Azure Application Insights** with **Power Apps Portals**. We covered using the content snippet to add the **Azure Application Insights JavaScript SDK**. We discussed how to extend the SDK to include values from liquid templating and window objects. Finally we reviewed page views and how they can represented in **Application Insights**.
 
-For next steps, continue exploring liquid templating and how to continuous enrich your messages sent to Azure Application Insights. Consider the custom property and metrics bag and how these can be supplmented with **Common Data Service** content or browser resource timings. Continuing this series we will cover how to implement and use **Azure Blob Storage** for diagnostic logging.
+For next steps, [continue exploring liquid templating](https://stoneridgesoftware.com/using-liquid-templates-and-fetchxml-to-retrieve-data-in-a-dynamics-365-online-portal/) and how to continuous enrich your messages sent to Azure Application Insights. Consider the custom property and metrics bag and how these can be supplemented with **Common Data Service** content or browser resource timings. Continuing this series we will cover how to implement and use **Azure Blob Storage** for diagnostic logging.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details.
 
