commit context images to portal doc

--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -75,6 +75,8 @@ Once the instrumentation key has been added and the changes have been applied to
 
 Establishing a strong session and operational context is key to not only **Power App Portal** telemetry but practically any service or application. Review [the information found in the Power Apps Component Framework article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-apps---power-apps-component-framework#pcf-configurecontext), while using TypeScript, is applicable here working with JavaScript.
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AddTelemetryInitializer.PNG" style="zoom: 80%;" />
+
 ### Working with Liquid Templating Objects
 
 **Liquid Templating** allows makers and developers to add contextual information dynamically to **Power Apps Portal** web pages. Logged in user information, site settings, **Common Data Service** data, etc can all be referenced. For example, to work with user contextual information, [refer to this article](https://docs.microsoft.com/en-us/powerapps/maker/portals/liquid/liquid-objects#user), which describes user as an entity object (contact). 
@@ -82,6 +84,8 @@ Establishing a strong session and operational context is key to not only **Power
 Below is an example of referencing a logged in user's information to set the authenticated user context within the Application Insights telemetry client. 
 
 **<u>Author's Note:</u>** Big thanks to **[Nikita Polyakov](https://www.linkedin.com/in/nikitapolyakov/)** for his assistance with creating and identifying enhancements to this script!
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/LiquidTemplate.User.Context.PNG" style="zoom: 80%;" />
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/portal.AppInsightsSnippet.Liquid.User.PNG" style="zoom: 80%;" />
 
