--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -111,6 +111,10 @@ Portal, being a Web App by nature, works really well with various features of **
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AppInsights.UserFlow.PNG" style="zoom: 80%;" />
 
+As discussed above, enriching messages is key to understanding and gaining insight into potential problems. **<u>In the example below I have created a scenario where a AJAX call has caused a performance concern.</u>** 
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/ApplicationMapAndDependencyAjaxCallPerformance.gif" style="zoom: 80%;" />
+
 ## Sample Code
 
 The sample code used in this article can be found in the [**MonitoringPowerPlatform** GitHub repo located here](https://github.com/aliyoussefi/MonitoringPowerPlatform/blob/master/Samples/PowerAppsPortals/AppInsights/ApplicationInsightsV2_SnippetAndExample.js).
