final for portal doc

--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -11,7 +11,7 @@ In this article we focus on adding **Azure Application Insights** to a **Power A
 
 ![ ](https://community.dynamics.com/resized-image/__size/320x240/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/2262.pastedimage1589496009445v17.png)
 
-**[Azure Application Insights** is an extensible Application Performance Management (APM) service](https://docs.microsoft.com/en-us/azure/azure-monitor/app/app-insights-overview) that can be used to monitor applications, tests, etc. **Azure Application Insights** can be used with any application hosted in any environment. Depending on what's being monitored there are SDKs available. For other applications connections and message delivery can be programmed using the REST APIs available.
+As part of the **Azure Monitor** suite, [**Azure Application Insights** is an extensible Application Performance Management (APM) service](https://docs.microsoft.com/en-us/azure/azure-monitor/app/app-insights-overview) that can be used to monitor applications, tests, etc. **Azure Application Insights** can be used with any application hosted in any environment. Depending on what's being monitored there are SDKs available. For other applications connections and message delivery can be programmed using the REST APIs available.
 
 For **Power Platform** components, **Application Insights** is recommended due to its direct integration with **Power Apps** features and tools and its capabilities to deliver to the API.
 
@@ -127,7 +127,9 @@ The sample code used in this article can be found in the [**MonitoringPowerPlatf
 
 In this article we have discussed how to set up **Azure Application Insights** with **Power Apps Portals**. We covered using the content snippet to add the **Azure Application Insights JavaScript SDK**. We discussed how to extend the SDK to include values from liquid templating and window objects. Finally we reviewed page views and how they can represented in **Application Insights**.
 
-For next steps, [continue exploring liquid templating](https://stoneridgesoftware.com/using-liquid-templates-and-fetchxml-to-retrieve-data-in-a-dynamics-365-online-portal/) and how to continuous enrich your messages sent to Azure Application Insights. Consider the custom property and metrics bag and how these can be supplemented with **Common Data Service** content or browser resource timings. Continuing this series we will cover how to implement and use **Azure Blob Storage** for diagnostic logging.
+For next steps, [continue exploring liquid templating](https://stoneridgesoftware.com/using-liquid-templates-and-fetchxml-to-retrieve-data-in-a-dynamics-365-online-portal/) and how to continuous enrich your messages sent to **Azure Application Insights**. Consider **the custom property and metrics bag and how these can be supplemented** with **Common Data Service** content or browser resource timings. Also consider ways add instrumentation to other aspects of **Power Apps Portal** than just collecting Page Views including **page exceptions**, **dependent API calls**, **JavaScript processing**, etc.
+
+Continuing this series we will cover how to implement and use **Azure Blob Storage** for **diagnostic logging**.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details.
 
